<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_of_potential_workers_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.employer.EmployerModePotentialEmployeeListActivity">

    <TextView
        android:id="@+id/potential_employees_title"
        android:layout_width="273dp"
        android:layout_height="48dp"
        android:text="@string/potential_employees_title"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/potential_employee_list_recycler_view"
        android:layout_width="388dp"
        android:layout_height="480dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/potential_employees_title" />

    <TextView
        android:id="@+id/potential_employee_list_nothing_text"
        android:layout_width="248dp"
        android:layout_height="44dp"
        android:text="@string/nothing_to_see_here"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.133" />

</androidx.constraintlayout.widget.ConstraintLayout>