...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.employer.EmployerModeActivity"
    android:id="@+id/EmployerMode_view">

    <TextView
        android:id="@+id/employer_mode_welcome"
        android:layout_width="240dp"
        android:layout_height="100dp"
        android:text="Welcome to Employer Mode"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.025" />

    <Button
        android:id="@+id/create_Job_Button"
        android:layout_width="130dp"
        android:layout_height="68dp"
        android:text="Create New Job"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
...
        app:layout_constraintHorizontal_bias="0.722"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <Button
        android:id="@+id/employer_view_potential_workers_button"
        android:layout_width="187dp"
        android:layout_height="71dp"
        android:text="View Potential Workers"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
...
