...
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.worker.WorkerModeActivity"
    android:id="@+id/worker_mode_view">

    <SeekBar
        android:id="@+id/radius_seek_bar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="200dp"
        android:layout_height="30dp"
...
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listingRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="SpeakableTextPresentCheck"
            tools:itemCount="15"
...
