<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/employer_profile_activity"
    tools:context=".controllers.employer.EmployerProfileActivity">

    <ImageView
        android:id="@+id/employer_profile_pic"
        android:layout_width="147dp"
        android:layout_height="127dp"
...
            android:text="@string/employer_mode_potential_worker_profile_about_me"
            android:textSize="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/go_back_to_job_listing_btn"
        android:layout_width="101dp"
        android:layout_height="64dp"
        android:text="@string/go_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
...
